# grayplots

./: .gitattributes  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
grayplots/: _version.py  grayplots.py
grayplots/cli/: run.py
grayplots/reporting/: generate_report.py
