[metadata]
name = grayplots
url = https://git.bcbl.eu/SPIN/grayplots
download_url = https://git.bcbl.eu/SPIN/grayplots
author = Eneko Uruñuela
maintainer = Eneko Uruñuela
maintainer_email = e.urunuela@bcbl.eu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = GPLv3
description = A tensor decomposition package for Multi Echo fMRI data in Python.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    whiteorse

[options]
python_requires = >=3.6.1
install_requires =
    matplotlib
    numpy
    sklearn
    nibabel
    bokeh
    scipy
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=3.7
test =
    pytest-cov
all =
    %(doc)s
    %(style)s
    %(test)s

[options.entry_points]
console_scripts =
    grayplots=grayplots.grayplots:_main

[flake8]
doctest = True
exclude=
    *build/
    tests
ignore = E126, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = grayplots/_version.py
versionfile_build = grayplots/_version.py
tag_prefix =
parentdir_prefix =